# compileeen

./: .gitignore  CMakeLists.txt  README.md  test.cpp
presentation/: README.md  index.html
presentation/js/: reveal.min.js
presentation/resources/: pres.css  webgl.html
src/: config.cpp  config.h  flags.h  main.cpp
src/ilgen/: ilgen.cpp  ilgen.h  support.cpp  support.h
src/parse/: SymbolTable.cpp  SymbolTable.h  mipl.l  mipl.y  parsefunctions.cpp  parsefunctions.h
tests/: run.sh
tests/assignmentsimple/: expected.txt  test.mipl
tests/assignmentsimpleNegation/: expected.txt  test.mipl
tests/helloworld/: test.mipl
tests/ifthenFalse/: test.mipl
tests/ifthenTrue/: expected.txt  test.mipl
tests/readconstant/: expected.txt  test.mipl
tests/writeconstants/: expected.txt  test.mipl
